changes made in dashboard

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
     <!---   Font Awesome     ----->
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
-    <title>Vite + React</title>
+    <title>Zerodha</title>
   </head>
   <body>
     <div id="root"></div>
